forgot pswd not working

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,16 @@
     />
     <!-- Material Kit CSS -->
     <link href="assets/css/material-dashboard.css?v=2.1.2" rel="stylesheet" />
+
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Lato"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <app-root></app-root>
