--- a/src/index.html
+++ b/src/index.html
@@ -22,14 +22,17 @@
       type="text/css"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
     />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
     />
     <!-- Material Kit CSS -->
-    <link href="assets/css/material-dashboard.css?v=2.1.2" rel="stylesheet" />
+    <!-- <link href="assets/css/material-dashboard.css?v=2.1.2" rel="stylesheet" /> -->
 
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <link
